@@ -1,5 +1,11 @@
 2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: fixed another minor memleak (yeah i'm playing
+	  with valgrind ;) )
+
+2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: it appeared i had to free the result of
 	  ped_partition_get_path in order to prevent a memleak.
 
